# pplx-agent-tools

./: .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  README.md  SKILL.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  gitleaks.yml
docs/wire/: search-web.md
pplx_agent_tools/: __init__.py  auth.py  cli.py  cli_auth.py  cli_fetch.py  cli_runner.py  cli_search.py  cli_skill.py  cli_snippets.py  errors.py  render.py  wire.py
pplx_agent_tools/verbs/: __init__.py  fetch.py  search.py  snippets.py
scripts/: _inspect_hits.py  probe-search-filters.py  re-capture-paste.py  re-capture.py  re-replay-search.py  re-sanitize-fetch-fixture.py
tests/: _doubles.py  conftest.py  test_auth.py  test_cli.py  test_cli_auth.py  test_cli_fetch.py  test_cli_runner.py  test_cli_skill.py  test_concurrency.py  test_errors.py  test_fixture_replay.py  test_fixture_replay_fetch.py  test_fuzz_robustness.py  test_json_envelope.py  test_render.py  test_verbs_fetch.py  test_verbs_search.py  test_verbs_snippets.py  test_verbs_snippets_retrieval.py  test_wire.py  test_wire_sse_property.py
tests/fixtures/fetch-url/: example-com-prompt.events.jsonl  no-completed-marker.events.jsonl
tests/fixtures/search-web/: all-filtered-hits.json  claude-code-realtime.json  empty-web-results.json  minimal-hit.json
