[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pplx-agent-tools"
version = "0.0.0"
description = "Agent toolkit for Perplexity, backed by your Pro subscription's web session cookies"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "ak2k" }]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Environment :: Console",
]
dependencies = [
    "curl_cffi>=0.7",
    "rookiepy>=0.5",
    "trafilatura>=1.12",
    "fastembed>=0.4",
    "sqlite-vec>=0.1.6",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov>=5",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "vulture>=2.10",
    "pyright>=1.1.380",
]

[project.scripts]
pplx = "pplx_agent_tools.cli:main"

[project.urls]
Repository = "https://github.com/ak2k/pplx-agent-tools"
Issues = "https://github.com/ak2k/pplx-agent-tools/issues"

[tool.hatch.build.targets.wheel]
packages = ["pplx_agent_tools"]
# Ship SKILL.md inside the package so `pplx skill-path` can resolve it on
# uv-tool-install / pipx / pip-installed setups (without a Nix-managed
# ~/.claude/skills/ wiring). The source-of-truth lives at the repo root
# for GitHub discoverability; we copy it under the package at build time.
force-include = { "SKILL.md" = "pplx_agent_tools/SKILL.md" }

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["re-fixtures", "scripts/_inspect_hits.py"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports/vars)
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "RUF",  # ruff-specific
    "SIM",  # flake8-simplify
    "PIE",  # flake8-pie (misc)
    # "TC" rules (TYPE_CHECKING-block imports) intentionally omitted —
    # `from __future__ import annotations` makes them runtime-irrelevant
    # but the TYPE_CHECKING ceremony hurts readability.
    "ARG",  # unused arguments
    "PTH",  # pathlib usage
    "ERA",  # commented-out code
    "PLR",  # pylint refactor
    "PLW",  # pylint warnings
]
ignore = [
    "E501",     # line too long — line-length is the source of truth
    "PLR0913",  # too many arguments — CLI verb signatures are wide
    "PLR2004",  # magic value comparisons — false positives in tests
]

[tool.ruff.lint.pylint]
max-branches = 16  # default 12; verb orchestrators legitimately need a few more

[tool.ruff.lint.per-file-ignores]
# Scripts are exploratory RE tooling — relax style/complexity rules.
"scripts/*" = ["ARG", "ERA", "PLR", "SIM105"]
# Tests routinely have unused fixture args (activated for side effects) and
# fake-class method args that match base-class signatures.
"tests/*" = ["ARG", "PLR2004"]

[tool.vulture]
paths = ["pplx_agent_tools"]
min_confidence = 70
ignore_decorators = ["@dataclass", "@classmethod", "@staticmethod"]
ignore_names = [
    # Entry points exported via [project.scripts]
    "main",
    "build_parser",
    # Dataclass fields and verb-public APIs
    "warnings",
    "media_items",
]

[tool.coverage.run]
# Default `--cov` target so contributors get a useful report without flags
# (uv run --extra dev pytest --cov).
source = ["pplx_agent_tools"]
branch = true
omit = ["pplx_agent_tools/__init__.py"]

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true

[tool.pyright]
include = ["pplx_agent_tools"]
exclude = ["re-fixtures", "**/__pycache__"]
pythonVersion = "3.10"
typeCheckingMode = "standard"
# Third-party deps without stubs: curl_cffi (Rust bindings), rookiepy (Rust),
# trafilatura (older lib, no inline annotations). Silence stub-missing noise
# rather than burn time chasing it.
reportMissingTypeStubs = false
reportMissingImports = "warning"
useLibraryCodeForTypes = true
